--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ previous/test_psm2d.m
 prelim/datasets/PlaneScan3D_PlexiAluFBH_old.mat
 
 prelim/datasets/LineScan2D_PinsPlexiAluSDH_old.mat
+
+experimental
