Moved psm_array_planewave, updated tests with necessary paths
Archived psm_array_planewave under /experimental. Inserted addpath() commands in all tests to add /core and /misc to path.

--- a/.gitignore
+++ b/.gitignore
@@ -53,5 +53,5 @@ prelim/datasets/PlaneScan3D_PlexiAluFBH_old.mat
 
 prelim/datasets/LineScan2D_PinsPlexiAluSDH_old.mat
 
-experimental
+prelim
 *.asv
