--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ experimental/psm_spec_input/RawDataMerged.tif
 experimental/psm_spec_input/email.txt
 experimental/psm_spec_input/FocusedDataMerged.mat
 experimental/psm_spec_input/FocusedDataMerged.tif
+installing octave on linux.txt
